--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -2,7 +2,7 @@ hibernate.connection.url=jdbc:postgresql://localhost:5432/hibernatetask
 hibernate.connection.username=postgres
 hibernate.connection.password=root
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.ddl-auto=validate
 hibernate.hbm2ddl.auto=update
 show_sql=true
