--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -14,8 +14,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <log4j2-version>2.13.3</log4j2-version>
+    <log4j2-version>2.17.0</log4j2-version>
+    <flyway.user>postgres</flyway.user>
+    <flyway.password>root</flyway.password>
+    <flyway.schemas>hibernatetask</flyway.schemas>
+    <flyway.url>jdbc:postgresql://localhost:5432/hibernatetask</flyway.url>
+
   </properties>
+
 
   <dependencyManagement>
     <dependencies>
@@ -46,7 +52,7 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>runtime</scope>
-      <version>${log4j2-version}</version>
+      <version>2.17.0</version>
     </dependency>
 
     <!-- testing -->
@@ -101,13 +107,6 @@
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-maven-plugin</artifactId>
         <version>8.4.4</version>
-        <configuration>
-          <user>postgres</user>
-          <password>root</password>
-          <schemas>
-            <schema>hibernatetask</schema>
-          </schemas>
-        </configuration>
       </plugin>
 
 
